--- a/styles.css
+++ b/styles.css
@@ -214,3 +214,37 @@ body {
     height: 60px;
   }
 }
+
+.alert {
+  position: absolute;
+  top: 20vh;
+  background-color: rgba(0, 0, 0, 60%);
+  font-size: 1.5rem;
+  border-radius: calc(var(--border-radius) * 2);
+  padding: 1rem;
+  color: white;
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+}
+
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
